# tipc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  ASTAccessExpr_8cpp.html  ASTAccessExpr_8cpp__incl.map  ASTAccessExpr_8cpp__incl.md5  ASTAccessExpr_8h.html  ASTAccessExpr_8h__dep__incl.map  ASTAccessExpr_8h__dep__incl.md5  ASTAccessExpr_8h__incl.map  ASTAccessExpr_8h__incl.md5  ASTAccessExpr_8h_source.html  ASTAllocExpr_8cpp.html  ASTAllocExpr_8cpp__incl.map  ASTAllocExpr_8cpp__incl.md5  ASTAllocExpr_8h.html  ASTAllocExpr_8h__dep__incl.map  ASTAllocExpr_8h__dep__incl.md5  ASTAllocExpr_8h__incl.map  ASTAllocExpr_8h__incl.md5  ASTAllocExpr_8h_source.html  ASTAssignStmt_8cpp.html  ASTAssignStmt_8cpp__incl.map  ASTAssignStmt_8cpp__incl.md5  ASTAssignStmt_8h.html  ASTAssignStmt_8h__dep__incl.map  ASTAssignStmt_8h__dep__incl.md5  ASTAssignStmt_8h__incl.map  ASTAssignStmt_8h__incl.md5  ASTAssignStmt_8h_source.html  ASTBinaryExpr_8cpp.html  ASTBinaryExpr_8cpp__incl.map  ASTBinaryExpr_8cpp__incl.md5  ASTBinaryExpr_8h.html  ASTBinaryExpr_8h__dep__incl.map  ASTBinaryExpr_8h__dep__incl.md5  ASTBinaryExpr_8h__incl.map  ASTBinaryExpr_8h__incl.md5  ASTBinaryExpr_8h_source.html  (+1597 more)
src/: AST.cpp  AST.h  ASTBuilder.cpp  ASTBuilder.h  ASTVisitor.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  PrettyPrinter.cpp  PrettyPrinter.h  SymbolTable.cpp  SymbolTable.h  TIP.g4  TIPast.cpp  TIPtree.cpp  TIPtree.h  TIPtreeBuild.cpp  TIPtreeBuild.h  TIPtreeDepthFirstVisitor.cpp  TIPtreeDepthFirstVisitor.h  TIPtreeGen.cpp  TIPtreeGen.h  TIPtreePrint.cpp  TIPtreeTypeAnalyzer.cpp  TIPtreeTypeAnalyzer.h  TIPtreeTypes.h  TIPtreeVisitor.h  TIPtypecheck.cpp  TIPtypes.cpp  TIPtypes.h  TiptreeDepthFirstVisitor.cpp  TiptreeDepthFirstVisitor.h  Types.cpp  UnionFindSolver.cpp  UnionFindSolver.h  tipc.cpp
src/ast/: ASTBuilder.cpp  ASTBuilder.h  ASTVisitor.h  CMakeLists.txt
src/ast/treetypes/: AST.h  ASTAccessExpr.h  ASTAllocExpr.h  ASTAssignStmt.cpp  ASTAssignStmt.h  ASTBinaryExpr.cpp  ASTBlockStmt.h  ASTDeRefExpr.cpp  ASTDeRefExpr.h  ASTDeclNode.h  ASTDeclStmt.cpp  ASTErrorStmt.cpp  ASTErrorStmt.h  ASTFunAppExpr.cpp  ASTFunction.cpp  ASTFunction.h  ASTIfStmt.cpp  ASTIfStmt.h  ASTInputExpr.cpp  ASTInputExpr.h  ASTNode.h  ASTNumberExpr.h  ASTOutputStmt.cpp  ASTPointerAssignStmt.cpp  ASTPointerAssignStmt.h  ASTProgram.cpp  ASTProgram.h  ASTRefExpr.cpp  ASTRefExpr.h  ASTReturnStmt.cpp  ASTReturnStmt.h  ASTStmt.h  ASTVariableAssignStmt.cpp  ASTVariableAssignStmt.h  ASTWhileStmt.cpp  ASTWhileStmt.h
src/ast/treetypes/attic/: AST.cpp  OLDAST.h
src/catch_tests/: CMakeLists.txt  ParserTest.cpp  PrettyPrinterTest.cpp
src/catch_tests/helpers/: ASTHelper.cpp  ASTHelper.h  CMakeLists.txt  GeneralHelper.h
src/catch_tests/utils/: CMakeLists.txt  PrettyPrintVisitorTest.cpp  PrettyPrinterTest.cpp
src/codegen/: CMakeLists.txt  CodeGenFunctions.cpp  CodeGenerator.cpp  CodeGenerator.h
src/error/: CMakeLists.txt  Error.cpp  Error.h  InternalError.h  ParseError.h  SemanticError.h
src/frontend/: CMakeLists.txt  FrontEnd.cpp  FrontEnd.h  TIP.g4
src/frontend/ast/: ASTBuilder.cpp  ASTBuilder.h  ASTVisitor.h  CMakeLists.txt  SyntaxTree.cpp  SyntaxTree.h
src/frontend/ast/treetypes/: AST.h  ASTAccessExpr.cpp  (+49 more)
src/frontend/iterators/: CMakeLists.txt  Iterator.cpp  Iterator.h  IteratorImpl.cpp  IteratorImpl.h  IteratorUtils.tpp  PreOrderIterator.cpp  PreOrderIterator.h
src/frontend/prettyprint/: ASTVisualizer.cpp  ASTVisualizer.h  CMakeLists.txt  PrettyPrinter.cpp  PrettyPrinter.h
src/optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.h
src/prettyprint/: CMakeLists.txt  PrettyPrinter.cpp  PrettyPrinter.h
src/semantic/: CMakeLists.txt  SemanticAnalysis.cpp  SemanticAnalysis.h
src/semantic/cfa/: CFA.h  CFACubicSolver.cpp  CFACubicSolver.h  CFAnalyzer.cpp  CFAnalyzer.h  CGB.h  CMakeLists.txt  CallGraph.cpp  CallGraph.h  CallGraphBuilder.cpp  CallGraphBuilder.h  CubicSolver.cpp  CubicSolver.h
src/semantic/symboltable/: CMakeLists.txt  FieldNameCollector.cpp  FieldNameCollector.h  FunctionNameCollector.cpp  FunctionNameCollector.h  LocalNameCollector.cpp  LocalNameCollector.h  SymbolTable.cpp  SymbolTable.h
src/semantic/types/: CMakeLists.txt  TypeInference.cpp  TypeInference.h
src/semantic/weeding/: CMakeLists.txt  CheckAssignable.cpp  CheckAssignable.h
src/symboltable/: CMakeLists.txt  FieldNameCollector.cpp  FunctionNameCollector.cpp  FunctionNameCollector.h  LocalNameCollector.cpp  LocalNameCollector.h  SymbolTable.cpp  SymbolTable.h
src/types/: CMakeLists.txt
src/types/concrete/: TipAlpha.cpp  TipAlpha.h  TipCons.cpp  TipCons.h  TipFunction.cpp  TipFunction.h  TipInt.cpp  TipInt.h  TipMu.h  TipRecord.cpp  TipRecord.h  TipRef.cpp  TipRef.h  TipType.h  TipVar.cpp  TipVar.h
src/types/constraints/: AppearingFieldsVisitor.cpp  AppearingFieldsVisitor.h  TypeConstraint.cpp  TypeConstraint.h  TypeConstraintVisitor.cpp  TypeConstraintVisitor.h
src/types/solver/: UnificationError.cpp  Unifier.cpp  Unifier.h  UnionFind.h  UnionFind.tpp
src/utils/: CMakeLists.txt  PrettyPrintVisitor.cpp  PrettyPrintVisitor.h  PrettyPrinter.cpp  PrettyPrinter.h  SampleVisitor.cpp  SampleVisitor.h
src/weeding/: CMakeLists.txt  CheckAssignable.cpp  CheckAssignable.h
test/unit/: CMakeLists.txt  CheckAssignableTest.cpp  PrettyPrinterTest.cpp  SymbolTableTest.cpp  TIPParserTest.cpp
test/unit/codegen/: CMakeLists.txt  CodegenFunctionsTest.cpp
test/unit/frontend/: ASTBuilderTest.cpp  ASTPrinterTest.cpp  ASTVisualizerTest.cpp  CMakeLists.txt  IteratorTest.cpp  IteratorUtilsTest.cpp  PreOrderIteratorTest.cpp  PrettyPrinterTest.cpp  SyntaxTreeTest.cpp  TIPParserTest.cpp
test/unit/helpers/: ASTHelper.cpp  ASTHelper.h  ASTNodeFinder.h  ASTNodeHelpers.h  CMakeLists.txt  ExceptionContainsWhat.h  GeneralHelper.cpp  GeneralHelper.h  ParserHelper.cpp  ParserHelper.h  Stringifier.cpp  Stringifier.h  TypeHelper.cpp  TypeHelper.h
test/unit/matchers/: ExceptionContainsWhat.h
test/unit/semantic/: CMakeLists.txt  CheckAssignableTest.cpp  LocalNameCollectorTest.cpp  SymbolTableTest.cpp
test/unit/types/: CMakeLists.txt
(+346 files in other folders)
