add_library(symboltable)
target_sources(symboltable
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/SymbolTable.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/SymbolTable.h
        )
target_include_directories(symboltable
        PUBLIC
        ${CMAKE_SOURCE_DIR}/src/ast
        ${CMAKE_SOURCE_DIR}/src/ast/treetypes
        )
